--- a/css/style.css
+++ b/css/style.css
@@ -44,6 +44,6 @@ body {
 
 #textOutput{
   color: #D500F9;
-  font-family: 'Homemade Apple', cursive;
-  font-size: 26px;
+  font-family: 'Orbitron', sans-serif;
+  font-size: 40px;
 }
