--- a/css/style.css
+++ b/css/style.css
@@ -9,12 +9,12 @@
 
  @media (min-width: 768px) {
   .bd-placeholder-img-lg {
-  font-size: 3.5rem;
+  font-size: 4.0rem;
   }
 }
 
 body {
-  padding-top: 3.5rem;
+  padding-top: 4.0rem;
 }
 
 * {
@@ -22,13 +22,13 @@ body {
 }
 
 .jumbotron {
-  background-color: #FFF8DC;
+  background-color: #00FFFF;
 }
 
 .column {
-  float: left;
-  width: 50%;
-  padding: 10px;
+  float: right;
+  width: 40%;
+  padding: 8px;
 }
 
 .row:after {
